global_web_app/loadbalancer.tf
## aws_elb_service_account

## aws_lb
resource "aws_lb" "nginx" {
  name               = "globo-web-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb-sg.id]
  subnets            = [aws_subnet.subnet1.id, aws_subnet.subnet2.id]

  enable_deletion_protection = false

  tags = local.common_tags
}

## aws_lb_target_group
resource "aws_lb_target_group" "nginx_lb_tg" {
  name        = "globo-web-lb-tg"
  port        = var.alb_tg_port
  protocol    = var.alb_tg_protocol
  vpc_id      = aws_vpc.vpc.id
}

## aws_lb_listener
resource "aws_lb_listener" "nginx" {
    load_balancer_arn = aws_lb.nginx.arn 
    port = "80"
    protocol = "HTTP"

    default_action {
        type = "forward"
        target_group_arn = aws_lb_target_group.nginx_lb_tg.arn
    }

    tags = local.common_tags
}

## aws_lb_target_group_attachment
resource "aws_lb_target_group_attachment" "nginx1" {
    target_group_arn = aws_lb_target_group.nginx_lb_tg.arn
    target_id = aws_instance.nginx1.id
    port = 80
}

resource "aws_lb_target_group_attachment" "nginx2" {
    target_group_arn = aws_lb_target_group.nginx_lb_tg.arn
    target_id = aws_instance.nginx2.id
    port = 80
}
